--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chrome Nano - Run Gemini Nano Locally</title>
+    <title>Chrome Nano - Run Gemini Locally</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/window-ai/0.4.6/window-ai.min.js"></script>
     <style>
         body {
